# dotfiles

./: .gitattributes  .gitignore  .p10k.zsh  .pre-commit-config.yaml  .stow-local-ignore  .zshrc  README.md  flatpak.txt  pkglist-aur.txt  pkglist.txt
.config/: dolphinrc  kdeglobals
.config/Kvantum/: kvantum.kvconfig
.config/base16/: generate-icons.sh
.config/btop/: btop.conf
.config/fastfetch/: config.jsonc  hk.ans
.config/ghostty/: config
.config/hypr/: .editorconfig  candy.conf  gestures.conf  hypridle.conf  hyprland.conf  hyprland.lua  hyprlock.conf  input.conf  keybinds.conf  keybinds_42.conf  keybinds_60.conf  monitors.conf  windowrules.conf  windows.conf
.config/hyprpanel/: config.json  modules.json
.config/kitty/: kitty.conf
.config/lazygit/: config.yml
.config/mpv/: mpv.conf
.config/nvim/: init.lua  lazy-lock.json
.config/quickshell/: README.md  shell.qml
.config/rofi/: DEPRECATED  apps.rasi  base.rasi  calc.rasi  catppuccin-mocha.rasi  clip.rasi  config.rasi  emoji.rasi  kanagawa.rasi  launcher.sh  nerdy.rasi
.config/swappy/: config
.config/walker/: config.toml
.config/wl-kbptr/: config
.config/xdg-desktop-portal/: portals.conf
.config/xdg-desktop-portal-termfilechooser/: config  yazi-wrapper.sh
custom/hyprland_socket/hyprsnake/: pyproject.toml
custom/hyprland_socket/hyprsnake/hyprsnake/: event_bus.py
scripts/: baksync  ffcompress  mkdesktop  steaminfo  syu  theme-set  transcribe  update_protonge  webapp-install  webapp-remove  wfcopy
windows/: .oh-my-posh.json  Microsoft.PowerShell_profile.ps1  we-have-stow-at-home.ps1
(+313 files in other folders)
